# monay-website-static

./: .env.circle.example  .env.dev  .env.example  .env.prod  .env.production  .gitignore  ACTUAL_TEST_RESULTS.md  ADMIN_ACCESS_CONTROL_MATRIX.md  ADMIN_ACCESS_FIX_SUMMARY.md  ADMIN_PORTAL_IMPROVEMENTS.md  ADMIN_PORTAL_STATUS.md  API_DOCUMENTATION.md  API_ENDPOINTS_DOCUMENTATION.md  API_KEYS_STATUS.md  AUTHENTICATION_GUIDE.md  AUTHENTICATION_SESSION_MANAGEMENT.md  AUTO_LOGIN_FEATURE.md  AWS_DEPLOYMENT_PLAN.md  AWS_DEPLOYMENT_STRATEGY.md  BACKEND_INTEGRATION_COMPLETE.md  BILLING_MODEL_EVALUATION.md  BLOCKCHAIN_ARCHITECTURE.md  BLOCKCHAIN_DUAL_RAIL_SPEC.md  BUSINESS_RULE_ENGINE_PATENT_ASSESSMENT.md  CIRCLE_CONSUMER_WALLET_IMPLEMENTATION.md  CIRCLE_DEPLOYMENT_GUIDE.md  CIRCLE_DUAL_WALLET_HYBRID_PLAN.md  CIRCLE_HYBRID_IMPLEMENTATION_PLAN.md  CIRCLE_INTEGRATION_COMPLETE.md  CIRCLE_INTEGRATION_DELIVERABLES.md  CIRCLE_INTEGRATION_FINAL_REPORT.md  CIRCLE_MINT_INTEGRATION_PLAN.md  CIRCLE_REMOVAL_GUIDE.md  CIRCLE_SETUP_GUIDE.md  CLAUDE.md  COMPLETE_BACKEND_IMPLEMENTATION.md  COMPREHENSIVE_DATABASE_RECOVERY_ANALYSIS.md  COMPREHENSIVE_GAP_ANALYSIS.md  COMPREHENSIVE_REDESIGN_CHECKLIST.md  COMPREHENSIVE_TEST_FIX_REPORT.md  (+167 more)
Partner/: Zenus Bank.pptx
api-only/: .env.example  (+2 more)
monay-backend-common/solana-programs/programs/invoice-nft/: Cargo.toml
monay-backend-common/solana-programs/programs/invoice-nft/src/: lib.rs
monay-backend-common/solana-programs/programs/monay-spend-management/: Cargo.toml
monay-backend-common/solana-programs/programs/monay-spend-management/src/: lib.rs
(+8202 files in other folders)
