[package]
name = "invoice-nft"
version = "0.1.0"
description = "Monay Invoice Tokenization Program using Compressed NFTs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "invoice_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
mpl-bubblegum = "1.4.0"
spl-account-compression = "0.3.0"
spl-noop = "0.2.0"
solana-program = "1.17.0"