[package]
name = "monay-spend-management"
version = "0.1.0"
description = "Monay Spend Management Program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "monay_spend_management"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"